# xDB

./: .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  main.cpp
.github/workflows/: cmake-ubuntu.yml
binder/: binder.cpp  test.l
common/codec/: db.pb.cc  db.pb.h  db.proto
docs/: parser.md  storage.md
execution/: create_executor.cpp  delete_executor.cpp  drop_executor.cpp  eval_exp.cpp  execution_result.cpp  executor.cpp  insert_executor.cpp  select_executor.cpp  show_executor.cpp  update_executor.cpp  use_executor.cpp
execution/processor/: between_evaluator.cpp  binary_evaluator.cpp  binary_processor.cpp  exp_checker.cpp  processor.cpp  scalar_evaluator.cpp  scalar_processor.cpp  unary_evaluator.cpp  unary_processor.cpp  visit_exp.cpp
include/: constant.h  version.h
include/binder/: binder.h
include/execution/: executor.h
include/sql/: create_stmt.h  delete_stmt.h  drop_stmt.h  exp.h  insert_stmt.h  parser_result.h  select_stmt.h  show_stmt.h  stmt.h  stmts.h  table.h  update_stmt.h  use_stmt.h
parser/: sql.l  sql.y
sql/: create_stmt.cpp  delete_stmt.cpp  drop_stmt.cpp  exp.cpp  insert_stmt.cpp  parser_result.cpp  select_stmt.cpp  show_stmt.cpp  stmt.cpp  table.cpp  update_stmt.cpp  use_stmt.cpp
test/: CMakeLists.txt  simple.sql  smoke_test.cpp  test-main.cpp  test.sql
test/sql/: create_stmt_test.cpp
